adjusted column gap product listing page and spacing issues in header

--- a/src/components/AllProducts/AllProducts.css
+++ b/src/components/AllProducts/AllProducts.css
@@ -1,7 +1,5 @@
 .all-products-container{
     padding: 14px;
-    border: 2px solid green;
     display: flex;
     flex-wrap: wrap;
-    column-gap: 19px;    
 }
